Updated package description, added basic readme, and removed unecessary .npmrc configuration

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "national-rail-data",
-  "description": "",
+  "description": "A simple library to retrieve data from the national rail data portal service",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
