--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "rail"
   ],
   "files": [
-    "index.js"
+    "index.js",
+    "lib/*"
   ],
   "engines": {
     "node": ">= 10.15.3"
@@ -31,9 +32,16 @@
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
     "mocha-junit-reporter": "^1.22.0",
+    "nock": "^10.0.6",
     "nyc": "^14.0.0",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
     "standard": "^12.0.1"
+  },
+  "dependencies": {
+    "bunyan": "^1.8.12",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
+    "xml2js": "^0.4.19"
   }
 }
