--- a/.nycrc
+++ b/.nycrc
@@ -2,5 +2,8 @@
   "lines": 100,
   "statements": 100,
   "functions": 100,
-  "branches": 100
+  "branches": 100,
+  "excludes": [
+    "README.md"
+  ]
 }
